// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Semantic Analysis|WordCountInformation default 1`] = `
<div
  className="description"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Le résultat de l'analyse sémantique ci-dessous provient de l'analyse de <span class='words-watson'>50 mots</span> dans la thématique.",
      }
    }
  />
</div>
`;

exports[`Storyshots Semantic Analysis|WordCountInformation playground 1`] = `
<div
  className="description"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Le résultat de l'analyse sémantique ci-dessous provient de l'analyse de <span class='words-watson'>120 mots</span> dans la thématique.",
      }
    }
  />
</div>
`;
